replaced vh measurements for layout divs with absolute px to prevent squashing of views when viewing chrome dev tools

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,6 @@ code {
   left: 0;
   width: 100%;
   background: transparent;
-  height: 50vh;
 }
 
 .page-middle
